wine show and history

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -27,3 +27,18 @@ fr:
       not_saved:
         one: "1 erreur a empêché l'enregistrement"
         other: "%{count} erreurs ont empêché l'enregistrement"
+
+
+fr:
+  date:
+    formats:
+      default: "%d/%m/%Y"
+      short: "%d %b"
+      long: "%d %B %Y"
+  time:
+    formats:
+      default: "%a %d %b %Y %H:%M:%S %z"
+      short: "%d %b %H:%M"
+      long: "%d %B %Y %H:%M"
+    am: "am"
+    pm: "pm"
